# sovarian

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh
assets/shaders/: pbr_shader.glsl
src/: main.cpp
src/core/: window.cpp  window.hpp
src/rendering/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/util/: log.hpp  singleton.hpp
tools/model_loader/: CMakeLists.txt  shader.glsl
tools/model_loader/src/: main.cpp  model_loader.hpp  shader.cpp  shader.hpp
